--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -97,11 +97,11 @@
       </div>
 
      </div>
-  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
+  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-2">
     <%for(let listing of allListings){ %>
         <a href="/listings/<%= listing._id %>" class="listing-link">
 
-            <div class="card col lisiting-card" >
+            <div class="card col listing-card mb-4 out" >
                 <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
                 <div class="card-img-overlay">
                     <h5 class="card-title"><%=listing.title%></h5>
