--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -87,8 +87,8 @@
              <div class="row  col-8 offset-3 mb-3 ">                    
                  <p> <b> All Reviews</b> </p>    
                  <%for(review of listing.reviews) { %>
-                    <div class="card col-5  ms-3 mb-3">
-                        <div class="card-body">
+                    <div class="card col-5   ms-3 mb-3">
+                        <div class="card-body col-5">
                             <h5 class="card-title"> <%= review.author.username %></h5>
                             <p class="starability-result card-text" data-rating="<%= review.rating %>">
                             
@@ -107,9 +107,9 @@
                 <%}%>
 
             </div>
-                <div class="col-6 offset-3 mb-3">
+                <div class="col-8 offset-3 mb-3">
                     <h3>Where You'll Be</h3>
-                    <div id="map"></div>
+                    <div id="map" ></div>
                 </div>
             </div>
 
